MakerModule status page. Migrate landing page to hyperspace

--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -21,6 +21,12 @@ functions:
       - http:
           path: /
           method: get
+      - http:
+          path: /
+          method: put
+      - http:
+          path: /
+          method: delete
 
 
 custom:
