--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -21,6 +21,11 @@ provider:
       Action:
         - s3:*
       Resource: 'arn:aws:s3:::makurspace-static-assets'
+    - Effect: Allow
+      Action:
+        - ses:SendRawEmail
+      Resource: '*'
+
 
 functions:
   hyperspace_api:
