--- a/api/serverless.yml
+++ b/api/serverless.yml
@@ -20,11 +20,13 @@ provider:
     - Effect: Allow
       Action:
         - s3:*
-      Resource: 'arn:aws:s3:::makurspace-static-assets'
+      Resource: 'arn:aws:s3:::makurspace-static-assets/*'
     - Effect: Allow
       Action:
+        - ses:SendEmail
         - ses:SendRawEmail
       Resource: '*'
+
 
 
 functions:
