Update frontend: distribute bounty_board components and sundry

--- a/frontend/serverless.yml
+++ b/frontend/serverless.yml
@@ -24,7 +24,7 @@ custom:
   s3Sync:
     - bucketName: makurspace-static-assets
       localDir: ./
-      deleteRemoved: true
+      deleteRemoved: false
       acl: public-read
 
 
