Initial discuss system

--- a/serverless.yml
+++ b/serverless.yml
@@ -97,6 +97,18 @@ functions:
           path: /rest/bounty_confirmation/{bounty_confirmation_id}
           method: get
       - http:
+          path: /rest/ask_benefactor/{bounty_id}
+          method: get
+      - http:
+          path: /rest/ask_benefactor/{bounty_id}
+          method: post
+      - http:
+          path: /rest/question/{question_id}
+          method: get
+      - http:
+          path: /rest/question/{question_id}
+          method: post
+      - http:
           path: /rest/edit_bounty/{bounty_id}
           method: get
       - http:
