--- a/serverless.yml
+++ b/serverless.yml
@@ -30,6 +30,10 @@ provider:
         - ses:SendEmail
         - ses:SendRawEmail
       Resource: '*'
+    - Effect: Allow
+      Action:
+        - lambda:InvokeFunction
+      Resource: 'arn:aws:lambda:*:*:function:stl_to_image'
 
 package:
   individually: true
@@ -163,6 +167,7 @@ functions:
       - http:
           path: /rest/rendered_bounty/{bounty_id}
           method: get
+
 
 custom:
   pythonRequirements:
